# ims-desktop-app

./: .gitignore  AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/renderer/: index.html  main.css  main.tsx
src/renderer/components/: app.tsx  dev-hotkeys.tsx  home.tsx  titlebar.tsx  update-toast.tsx
src/renderer/lib/: api.ts
src/renderer/splash/: index.html  splash.css  splash.ts
src/shared/: ipc.ts
